cleaned code and added docstrings

--- a/polymer_chain_fromscratch.ipynb
+++ b/polymer_chain_fromscratch.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +70,7 @@
     "        self.distances = list(())\n",
     "        self.directions = list(())\n",
     "        self.cm_trajectory = None\n",
+    "        self.msd = None\n",
     "    \n",
     "    # TODO: redo the get_bonds() method so that every bond pair only exists once\n",
     "    \n",
@@ -131,7 +132,8 @@
     "    \n",
     "    def get_bonds(self):\n",
     "        \"\"\"\n",
-    "        Create list of bond pair indices. the firs index always re\n",
+    "        Create list of bond pair indices. \n",
+    "        Bonds are saved twice, i.e.: (..., (i, j), ... , (j, i), ...)\n",
     "        \"\"\"\n",
     "        #define bonds\n",
     "        if self.bonds is None: \n",
@@ -152,7 +154,8 @@
     "    \n",
     "    def get_distances_directions(self):\n",
     "        \"\"\"\n",
-    "        get distances and directions for every bond\n",
+    "        Get distances and directions for every bond, saved in the self.bond list\n",
+    "        The directions are not normalized, since the normalization happens in the forcefiled calculation.\n",
     "        \"\"\"\n",
     "        # TODO: CHANGE THIS SO ALL DISTANCES ARE CALCULATED ONCE AND BONDED ONES ARE INDEXED BY BONDS\n",
     "        # meaning that the distances dont have to be calculated for every force\n",
@@ -176,7 +179,7 @@
     "\n",
     "    def get_forces(self):\n",
     "        \"\"\"\n",
-    "        this naively adds all the occuring forces, without caring about double calculations\n",
+    "        Delete al old forces and add all forces occuring in resulting from the self.positions configuration\n",
     "        \"\"\"\n",
     "        \n",
     "        #delete old forces\n",
@@ -280,6 +283,9 @@
     "\n",
     "    \n",
     "    def force_Random(self):\n",
+    "        \"\"\"\n",
+    "        Gaussian random Force with a per particle standard deviation of sqrt(6 mu_0) w.r.t. its absolute value\n",
+    "        \"\"\"\n",
     "        \n",
     "        # since the std of the foce should be sqrt(6*mu) but the std of the absolute randn vector is sqrt(3)\n",
     "        # the std used here is sqrt(2*mu)\n",
@@ -287,11 +293,22 @@
     "        return np.sqrt(2*self.mobility)*np.random.randn(self.n_beeds, 3)\n",
     "    \n",
     "    \n",
-    "    def analytical_potential_function(self, r=None):\n",
+    "    def analytical_potential_function(self, \n",
+    "                                      r = None):\n",
     "        \"\"\"\n",
-    "        Calculates the analytical interatomic potential of two bonded beeds:\n",
+    "        Calculates the analytical interatomic potential of two bonded beeds, using \n",
+    "        the parameters specified in __init__.\n",
+    "        This function is used for plotting.\n",
     "        \n",
+    "        Parameters:\n",
+    "            r (ndarray):\n",
+    "                vector of distances between two beeds\n",
     "        \n",
+    "        Returns:\n",
+    "            r (ndarray):\n",
+    "                vector of distances between two beeds\n",
+    "            U (ndarray):\n",
+    "                theoretical potential U(r)\n",
     "        \"\"\"\n",
     "        \n",
     "        if r is None:\n",
@@ -310,6 +327,10 @@
     "        return r, u_nn + u_LJ + u_Deb\n",
     "    \n",
     "    def get_CM_trajectory(self):\n",
+    "        \"\"\"\n",
+    "        Calculates the center of mass for every frame in the trajectory, assuming equal mass for every \n",
+    "        beed and saves it into a trajecorty. \n",
+    "        \"\"\"\n",
     "        \n",
     "        traj_cm = list(())\n",
     "\n",
@@ -321,25 +342,38 @@
     "            \n",
     "        return \n",
     "    \n",
-    "    def get_CM_MSD(self, plot=False):\n",
+    "    def get_CM_MSD(self, \n",
+    "                   plot: bool = False):\n",
+    "        \"\"\"\n",
+    "        Calculates the mead squared deviation of the center of mass to its original position.\n",
+    "        If plot is True, a log-log plot of the absolute MSD and the MSD for every CM coordinate is calculated\n",
+    "        and compared to the theoretical curve resulting from the mu_0 input.\n",
     "        \n",
-    "        # TODO: write this bs properly with class internal variables\n",
+    "        Parameters:\n",
+    "            plot (bool):\n",
+    "                wether to print the plot\n",
+    "        \"\"\"\n",
     "        \n",
+    "        # check if cm_traj has already been calculated\n",
     "        if self.cm_trajectory is None:\n",
     "            self.get_CM_trajectory()\n",
     "            traj_cm = self.cm_trajectory\n",
     "        else:\n",
     "            traj_cm = self.cm_trajectory\n",
     "        \n",
-    "        msd_tid = tid.msd(traj_cm)\n",
-    "        msd_tid_x = tid.msd(traj_cm[:,0])\n",
-    "        msd_tid_y = tid.msd(traj_cm[:,1])\n",
-    "        msd_tid_z = tid.msd(traj_cm[:,2])\n",
+    "        # TODO: saving cm trajectory into new array is unnecessary, clean all unnecessary variables\n",
     "        \n",
-    "        n_frames = len(traj_cm)\n",
-    "        t = np.arange(n_frames)\n",
-    "\n",
+    "        msd_tid = tid.msd(traj_cm)\n",
+    "        self.msd = msd_tid\n",
+    "        \n",
     "        if plot is True:\n",
+    "            msd_tid_x = tid.msd(traj_cm[:,0])\n",
+    "            msd_tid_y = tid.msd(traj_cm[:,1])\n",
+    "            msd_tid_z = tid.msd(traj_cm[:,2])\n",
+    "            \n",
+    "            n_frames = len(traj_cm)\n",
+    "            t = np.arange(n_frames)\n",
+    "        \n",
     "            plt.figure()\n",
     "            plt.loglog(t[1:], 2*t[1:]*self.mobility, label=r\"$2t\\tilde{\\mu}_0$\", linestyle=\"--\")\n",
     "            plt.loglog(t[1:], 6*t[1:]*self.mobility, label=r\"$6t\\tilde{\\mu}_0$\", linestyle=\"--\")\n",
@@ -354,7 +388,20 @@
     "            \n",
     "        return\n",
     "    \n",
-    "    def plot_distance_distribution_old(self, n_bins=100, bin_interval=None):\n",
+    "    \n",
+    "    def plot_distance_distribution(self, \n",
+    "                                   n_bins: int = 100, \n",
+    "                                   bin_interval: tuple = None):\n",
+    "        \"\"\"\n",
+    "        Plots a normalized distribution of all bonded distances in the trajectory\n",
+    "        and compares it to the Bolzmann distribution.\n",
+    "        \n",
+    "        Parameters:\n",
+    "            n_bins (int):\n",
+    "                number of bins in the histogram\n",
+    "            bin interval (tuple):\n",
+    "                left and right bin boundaries\n",
+    "        \"\"\"\n",
     "    \n",
     "        distances_nn = list(())\n",
     "        # for every frame calculate the distance between neighbouring atoms is the chain\n",
@@ -370,36 +417,7 @@
     "        histogram_nn, edges_nn = np.histogram(distances_nn, bins=n_bins, range=bin_interval, density=True)\n",
     "        \n",
     "        r, E_pot = self.analytical_potential_function(edges_nn[:n_bins])\n",
-    "        E_pot_normalize = np.sum((edges_nn[1:]-edges_nn[:n_bins])*np.exp(-E_pot))\n",
-    "\n",
-    "        plt.figure()\n",
-    "        plt.plot(r, histogram_nn, label=r\"$p(\\Delta\\tilde{r})$\")\n",
-    "        plt.plot(r, np.exp(-E_pot)/E_pot_normalize, label=r\"$\\frac{1}{Z}\\mathrm{exp}\\{-\\tilde{U}(\\tilde{\\Delta r})\\}$\")\n",
-    "        plt.legend()\n",
-    "        plt.xlabel(r\"$\\Delta\\tilde{r}$\")\n",
-    "        plt.ylabel(r\"$p(\\tilde{r})$\")\n",
-    "        plt.grid()\n",
-    "        plt.show()\n",
-    "        \n",
-    "        return\n",
-    "    \n",
-    "    def plot_distance_distribution(self, n_bins=100, bin_interval=None):\n",
-    "    \n",
-    "        distances_nn = list(())\n",
-    "        # for every frame calculate the distance between neighbouring atoms is the chain\n",
-    "        for frame in self.trajectory:\n",
-    "            distances_nn.append(np.sqrt(np.sum((frame[:self.n_beeds-1] - frame[1:])**2, axis=1)))\n",
-    "\n",
-    "        distances_nn = np.array(distances_nn).ravel()\n",
-    "        \n",
-    "        if bin_interval is None:\n",
-    "            bin_interval = (np.min(distances_nn), np.max(distances_nn))\n",
-    "\n",
-    "        # create normalized histogram\n",
-    "        histogram_nn, edges_nn = np.histogram(distances_nn, bins=n_bins, range=bin_interval, density=True)\n",
-    "        \n",
-    "        r, E_pot = self.analytical_potential_function(edges_nn[:n_bins])\n",
-    "        E_pot_normalize = np.sum((edges_nn[1:]-edges_nn[:n_bins])*np.exp(-E_pot) * 4*np.pi*edges_nn[:n_bins]**2) # here the jacibi determinant for scherical coordinated are added\n",
+    "        E_pot_normalize = np.sum((edges_nn[1:]-edges_nn[:n_bins])*np.exp(-E_pot) * 4*np.pi*edges_nn[:n_bins]**2) # here the jacobi determinant for spherical coordinates is added\n",
     "\n",
     "        plt.figure()\n",
     "        plt.plot(r - (r[1]-r[0]), histogram_nn, label=r\"$p(\\Delta\\tilde{r})$\")\n",
@@ -413,6 +431,10 @@
     "        return\n",
     "    \n",
     "    def create_topology_pdb(self):\n",
+    "        \"\"\"\n",
+    "        Creates a pdb topology of the current system\n",
+    "        \"\"\"\n",
+    "        \n",
     "        \n",
     "        file_name = f\"polymer_{self.n_beeds:d}_beeds\"\n",
     "\n",
@@ -443,7 +465,9 @@
     "        return\n",
     "\n",
     "    def save_traj_gro(self, fname_traj=None):\n",
-    "        \n",
+    "        \"\"\"\n",
+    "        Saves trajectory in a gromacs trajectory, using mdtraj\n",
+    "        \"\"\"\n",
     "        \n",
     "        fname_top = f'topologies/polymer_{self.n_beeds:d}_beeds.pdb'\n",
     "        \n",
@@ -465,7 +489,13 @@
     "        return\n",
     "    \n",
     "    \n",
-    "    def simulate(self, steps, write_traj=True, stride=1):\n",
+    "    def simulate(self, \n",
+    "                 steps: int = 10000, \n",
+    "                 write_traj: bool = True, \n",
+    "                 stride: int = 1):\n",
+    "        \"\"\"\n",
+    "        Simulates the brownian motion of the system with the defined forcefield using forward Euler.\n",
+    "        \"\"\"\n",
     "        \n",
     "        for step in range(steps-1):\n",
     "            \n",
@@ -476,14 +506,14 @@
     "            #self.get_forces_test()\n",
     "            self.get_forces()\n",
     "            \n",
-    "            \n",
-    "            \n",
     "            # integrate\n",
-    "            # self.integrator_Brownian()\n",
     "            # NOTE: the timestep of the integrator is already implicitly contained in the particle mobility\n",
-    "            self.positions_new = self.positions + self.mobility*self.forces + self.force_Random()\n",
+    "            self.positions = self.positions + self.mobility*self.forces + self.force_Random()\n",
+    "            \n",
+    "            # This would be needed if the velovity is calculated:\n",
+    "            #self.positions_new = self.positions + self.mobility*self.forces + self.force_Random()\n",
     "            #self.velocities = (self.positions - self.positions_new)\n",
-    "            self.positions = deepcopy(self.positions_new)\n",
+    "            #self.positions = deepcopy(self.positions_new)\n",
     "            \n",
     "            # write trajectory for every stride frames\n",
     "            if (write_traj==True) and (step%stride==0):\n",
@@ -718,6 +748,24 @@
     "\n",
     "trajectory = md.load(fname_traj, top=fname_top)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
