added S(q) - unfinished, untested

--- a/polymer_chain_fromscratch.ipynb
+++ b/polymer_chain_fromscratch.ipynb
@@ -48,39 +48,40 @@
     "                 pbc: bool = True,\n",
     "                 cwd: str = \"/home/jan/Documents/masterthesis/project/mucus\"):\n",
     "    \n",
-    "        self.n_beeds = n_beeds\n",
-    "        self.r_beed = r_beed\n",
-    "        self.q_beed = q_beed\n",
-    "        self.mobility = mobility\n",
-    "        self.force_constant_nn = force_constant_nn\n",
-    "        self.epsilon_LJ = epsilon_LJ\n",
-    "        self.sigma_LJ = sigma_LJ\n",
-    "        self.lB_debye = lB_debye # units of beed radii\n",
-    "        self.c_S = c_S # salt concentration [c_S] = mM\n",
-    "        self.cutoff_debye = cutoff_debye\n",
-    "        self.pbc = pbc\n",
-    "        self.bonds = bonds\n",
-    "        self.cwd = cwd       \n",
+    "        self.n_beeds            = n_beeds\n",
+    "        self.r_beed             = r_beed\n",
+    "        self.q_beed             = q_beed\n",
+    "        self.mobility           = mobility\n",
+    "        self.force_constant_nn  = force_constant_nn\n",
+    "        self.epsilon_LJ         = epsilon_LJ\n",
+    "        self.sigma_LJ           = sigma_LJ\n",
+    "        self.lB_debye           = lB_debye # units of beed radii\n",
+    "        self.c_S                = c_S # salt concentration [c_S] = mM\n",
+    "        self.cutoff_debye       = cutoff_debye\n",
+    "        self.pbc                = pbc\n",
+    "        self.bonds              = bonds\n",
+    "        self.cwd                = cwd       \n",
     "        \n",
-    "        self.r0_beeds = 2*r_beed\n",
-    "        self.box_length = 2*r_beed*n_beeds*1.5 # make box length 1.5 times chain length (arbitrary)\n",
-    "        self.A_debye = self.q_beed**2*self.lB_debye\n",
-    "        self.B_debye = 1/(r_beed*38.46153*self.c_S) # 1/(debye screening length) in units of beed radius\n",
+    "        self.r0_beeds       = 2*r_beed\n",
+    "        self.box_length     = 2*r_beed*n_beeds*1.5 # make box length 1.5 times chain length (arbitrary)\n",
+    "        self.A_debye        = self.q_beed**2*self.lB_debye\n",
+    "        self.B_debye        = 1/(r_beed*38.46153*self.c_S) # 1/(debye screening length) in units of beed radius\n",
     "\n",
     "    # TODO: make all variables none and initialize in methods\n",
     "        \n",
-    "        self.positions = None\n",
-    "        self.positions_new = np.zeros((n_beeds, 3))\n",
-    "        self.velocities = np.zeros((n_beeds, 3))\n",
-    "        self.forces = np.zeros((n_beeds, 3))\n",
-    "        self.energy = 0\n",
-    "        self.trajectory = np.zeros((1, n_beeds, 3)) # first dim is the frame\n",
-    "        self.distances_bonded = list(())\n",
-    "        self.directions_bonded = list(())\n",
-    "        self.distances = list(())\n",
-    "        self.directions = list(())\n",
-    "        self.cm_trajectory = None\n",
-    "        self.msd = None\n",
+    "        self.positions              = None\n",
+    "        self.positions_new          = np.zeros((n_beeds, 3))\n",
+    "        self.velocities             = np.zeros((n_beeds, 3))\n",
+    "        self.forces                 = np.zeros((n_beeds, 3))\n",
+    "        self.energy                 = 0\n",
+    "        self.trajectory             = np.zeros((1, n_beeds, 3)) # first dim is the frame\n",
+    "        self.distances_bonded       = list(())\n",
+    "        self.directions_bonded      = list(())\n",
+    "        self.distances              = list(())\n",
+    "        self.directions             = list(())\n",
+    "        self.cm_trajectory          = None\n",
+    "        self.msd                    = None\n",
+    "        self.structure_factor       = None\n",
     "    \n",
     "    # TODO: redo the get_bonds() method so that every bond pair only exists once\n",
     "    \n",
@@ -439,6 +440,35 @@
     "        plt.ylabel(r\"$p(\\tilde{r})$\")\n",
     "        plt.grid()\n",
     "        plt.show()\n",
+    "        \n",
+    "        return\n",
+    "    \n",
+    "    def get_structure_factor(self,\n",
+    "                        q = None):\n",
+    "        \"\"\"\n",
+    "        Calculates the structure factor of an isotropic system for different wavenumbers q\n",
+    "        Averaged over the whole trajectory\n",
+    "        \n",
+    "        Parametetrs\n",
+    "            q (ndarray):\n",
+    "                1D array of wavenumbers\n",
+    "        \"\"\" \n",
+    "        if q is None:\n",
+    "            q = np.linspace(0.0001, 10, 100)\n",
+    "            \n",
+    "        q = np.array(q)\n",
+    "        \n",
+    "        self.structure_factor = np.zeros(len(q))\n",
+    "               \n",
+    "        for frame in self.trajectory:\n",
+    "            for i in range(self.n_beeds-1):\n",
+    "                for j in range(i+1, self.n_beeds):\n",
+    "                    r = frame[j] - frame[j] \n",
+    "                    qr = q*np.sqrt(np.dot(r, r))\n",
+    "                    self.structure_factor += np.sin(qr)/qr\n",
+    "        \n",
+    "        #factor 2 because of double sum reduction from i,j to i<j\n",
+    "        self.structure_factor = self.structure_factor*2/self.n_beeds**2/len(self.trajectory)\n",
     "        \n",
     "        return\n",
     "    \n",
