implemented simulation through config file

--- a/polymer_chain_fromscratch_pbc.ipynb
+++ b/polymer_chain_fromscratch_pbc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "import mdtraj as md\n",
     "import tidynamics as tid\n",
     "import os\n",
+    "from pydantic import BaseModel\n",
     "\n",
     "from copy import deepcopy\n",
     "from time import time\n",
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,6 +772,8 @@
     "        else:\n",
     "            fname_traj = self.cwd + \"/trajectories/\" + fname_traj\n",
     "        \n",
+    "        \n",
+    "        \n",
     "        # save trajectory in mdtraj to create .gro simulation trajectory\n",
     "        topology = md.load(fname_top).topology\n",
     "        trajectory = md.Trajectory(self.trajectory, topology)\n",
@@ -863,31 +866,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1: 7 min\n"
+      "0: 5 min\n"
      ]
     }
    ],
    "source": [
     "# create periodic box system\n",
-    "mobility = 0.0005\n",
-    "steps = 10000\n",
+    "mobility = 0.00005\n",
+    "steps = 1000\n",
     "\n",
     "p = Polymer(mobility=mobility)\n",
-    "p.create_box()\n",
+    "p.create_box(N=10, M=6)\n",
     "t1 = time()\n",
     "p.simulate(steps)\n",
     "t2 = time()\n",
     "\n",
     "print(f\"{(t2-t1)//60:.0f}:{(t2-t1)%60:2.0f} min\")\n",
     "\n",
-    "#p.save_traj_gro(fname_traj=\"box_test_1.gro\") \n",
+    "p.save_traj_gro(fname_traj=\"box_test_1.gro\") \n",
     "\n"
    ]
   },
