added time reporter

--- a/polymer_box_fromscratch_withconfig.ipynb
+++ b/polymer_box_fromscratch_withconfig.ipynb
@@ -919,6 +919,8 @@
     "        if self.bonds is None:\n",
     "            self.get_bonds()\n",
     "        \n",
+    "        t_start = time()\n",
+    "        \n",
     "        for step in range(self.config.steps-1):\n",
     "            \n",
     "            # get distances for interactions\n",
@@ -950,6 +952,9 @@
     "            #     #print(self.forces)\n",
     "            #     #print(self.distances_bonded)\n",
     "            #     break\n",
+    "        t_end = time()\n",
+    "        \n",
+    "        self.config.simulation_time = t_end - t_start\n",
     "\n",
     "        return"
    ]
