--- a/testclass.ipynb
+++ b/testclass.ipynb
@@ -42,31 +42,18 @@
       "cutoff_debye = 4.0\n",
       "lbox = 20.0\n",
       "pbc = True\n",
-      "cutoff_pbc = None\n",
+      "cutoff_pbc = 4.0\n",
       "save_traj = True\n",
       "write_traj = True\n",
       "cwd = '/home/jan/Documents/masterthesis/project/mucus'\n",
       "fname_traj = '/home/jan/Desktop'\n",
       "fname_sys = '/home/jan/Desktop'\n",
       "bonds = None\n",
-      "simulation started  2.14.2023  19:21:22\n",
-      "simulation finished  2.14.2023  19:21:29\n",
-      "simulation time:  0:00:07\n",
-      "save trajectroy ...\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/home/jan/Documents/masterthesis/project/mucus/trajectories//home/jan/Desktop'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 27\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39msimulation time: \u001b[39m\u001b[39m\"\u001b[39m, datetime\u001b[39m.\u001b[39mtimedelta(seconds\u001b[39m=\u001b[39m\u001b[39mround\u001b[39m(t2\u001b[39m-\u001b[39mt1)))\n\u001b[1;32m     26\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39msave trajectroy ...\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 27\u001b[0m p\u001b[39m.\u001b[39;49msave_traj_gro()\n\u001b[1;32m     28\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mDone\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/Documents/masterthesis/project/mucus/polymer/polymer.py:799\u001b[0m, in \u001b[0;36mPolymer.save_traj_gro\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    796\u001b[0m trajectory \u001b[39m=\u001b[39m md\u001b[39m.\u001b[39mTrajectory(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtrajectory, topology)\n\u001b[1;32m    798\u001b[0m \u001b[39m# save as gromacs file\u001b[39;00m\n\u001b[0;32m--> 799\u001b[0m trajectory\u001b[39m.\u001b[39;49msave_gro(filename\u001b[39m=\u001b[39;49mfname_traj)\n\u001b[1;32m    801\u001b[0m \u001b[39mreturn\u001b[39;00m\n",
-      "File \u001b[0;32m~/anaconda3/envs/mucus/lib/python3.10/site-packages/mdtraj/core/trajectory.py:1699\u001b[0m, in \u001b[0;36mTrajectory.save_gro\u001b[0;34m(self, filename, force_overwrite, precision)\u001b[0m\n\u001b[1;32m   1687\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Save trajectory in Gromacs .gro format\u001b[39;00m\n\u001b[1;32m   1688\u001b[0m \n\u001b[1;32m   1689\u001b[0m \u001b[39mParameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1696\u001b[0m \u001b[39m    The number of decimal places to use for coordinates in GRO file\u001b[39;00m\n\u001b[1;32m   1697\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   1698\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_valid_unitcell()\n\u001b[0;32m-> 1699\u001b[0m \u001b[39mwith\u001b[39;00m GroTrajectoryFile(filename, \u001b[39m'\u001b[39;49m\u001b[39mw\u001b[39;49m\u001b[39m'\u001b[39;49m, force_overwrite\u001b[39m=\u001b[39;49mforce_overwrite) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m   1700\u001b[0m     f\u001b[39m.\u001b[39mwrite(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mxyz, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtopology, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtime, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39munitcell_vectors,\n\u001b[1;32m   1701\u001b[0m             precision\u001b[39m=\u001b[39mprecision)\n",
-      "File \u001b[0;32m~/anaconda3/envs/mucus/lib/python3.10/site-packages/mdtraj/formats/gro.py:158\u001b[0m, in \u001b[0;36mGroTrajectoryFile.__init__\u001b[0;34m(self, filename, mode, force_overwrite, top)\u001b[0m\n\u001b[1;32m    156\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mIOError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m already exists\u001b[39m\u001b[39m'\u001b[39m \u001b[39m%\u001b[39m filename)\n\u001b[1;32m    157\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_frame_index \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m--> 158\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_file \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(filename, \u001b[39m'\u001b[39;49m\u001b[39mw\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m    159\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    160\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39minvalid mode: \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m mode)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/jan/Documents/masterthesis/project/mucus/trajectories//home/jan/Desktop'"
+      "simulation started  2.14.2023  19:25:40\n",
+      "simulation finished  2.14.2023  19:25:45\n",
+      "simulation time:  0:00:05\n",
+      "save trajectroy ...\n",
+      "Done\n"
      ]
     }
    ],
