--- a/test_stuff.ipynb
+++ b/test_stuff.ipynb
@@ -90,6 +90,7 @@
     "    config_dict[\"nchains\"] = k[1]\n",
     "    config_dict[\"fname_sys\"] = f\"'/home/janmak98/mucus/configs/cfg_test_time_nbeads_{i:d}.toml'\"\n",
     "    config_dict[\"fname_traj\"] = f\"'/storage/janmak98/masterthesis/trajectories/box/test/traj_test_time_nbeads_{i:d}.gro'\"\n",
+    "    config_dict[\"cwd\"] = \"'/home/janmak98/mucus'\"\n",
     "    output = \"\"\n",
     "    for key in config_dict:\n",
     "        output += f\"{key:s} = {config_dict[key]}\\n\"\n",
