--- a/create_test_configs.ipynb
+++ b/create_test_configs.ipynb
@@ -14,17 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CREATE CONFIG FILES FOR TESTING\n",
     "\n",
     "#config_dict = {'steps': 100, 'stride': 50, 'nbeads': 10, 'nchains': 8, 'mobility': 5e-05, 'fname_sys': \"'a/b/c.txt'\", 'fname_traj': None}\n",
-    "config_dict = {'steps': 500, 'stride': 50, 'nbeads': 10, 'nchains': 8, 'mobility': 5e-05}\n",
+    "config_dict = {'steps': 10000, 'stride': 5, 'nbeads': 10, 'nchains': 8, 'mobility': 5e-05}\n",
     "\n",
     "# nm = ((6, 6), (10, 8), (10, 16), (12, 36), (20, 36), (11, 91))\n",
-    "nm = ((6, 6), (10, 8), (10, 16), (12, 36), (20, 36))\n",
+    "lbox = ()\n",
     "\n",
     "pathout = \"/home/jan/Documents/masterthesis/project/mucus/configs/tests\"\n",
     "path_sys = \"/home/janmak98/mucus/configs\"\n",
