test box sizes long

--- a/create_test_configs.ipynb
+++ b/create_test_configs.ipynb
@@ -14,27 +14,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CREATE CONFIG FILES FOR TESTING\n",
     "\n",
     "#config_dict = {'steps': 100, 'stride': 50, 'nbeads': 10, 'nchains': 8, 'mobility': 5e-05, 'fname_sys': \"'a/b/c.txt'\", 'fname_traj': None}\n",
-    "config_dict = {'steps': 10000, 'stride': 5, 'nbeads': 10, 'nchains': 8, 'mobility': 5e-05}\n",
+    "config_dict = {'steps': 200000, 'stride': 20, 'nbeads': 10, 'nchains': 12, 'mobility': 5e-05, 'lbox': 20}\n",
     "\n",
     "# nm = ((6, 6), (10, 8), (10, 16), (12, 36), (20, 36), (11, 91))\n",
-    "lbox = ()\n",
+    "nbeads = 10\n",
+    "r0 = 2\n",
+    "lbox = np.linspace(nbeads*r0, nbeads*r0*2.5, 7)\n",
     "\n",
     "pathout = \"/home/jan/Documents/masterthesis/project/mucus/configs/tests\"\n",
     "path_sys = \"/home/janmak98/mucus/configs\"\n",
     "path_traj = \"/storage/janmak98/masterthesis/trajectories/box/test\"\n",
     "\n",
-    "cfg_name = \"test_time_nbeads_2\"\n",
+    "cfg_name = \"test_boxsize_long\"\n",
     "\n",
-    "for i, k in enumerate(nm):\n",
-    "    config_dict[\"nbeads\"] = k[0]\n",
-    "    config_dict[\"nchains\"] = k[1]\n",
+    "for i, k in enumerate(lbox):\n",
+    "    # config_dict[\"nbeads\"] = k[0]\n",
+    "    # config_dict[\"nchains\"] = k[1]\n",
+    "    config_dict[\"lbox\"] = k\n",
     "    config_dict[\"fname_sys\"] = f\"'{path_sys:s}/cfg_{cfg_name:s}_{i:d}.toml'\"\n",
     "    config_dict[\"fname_traj\"] = f\"'{path_traj:s}/traj_{cfg_name:s}_{i:d}.gro'\"\n",
     "    config_dict[\"cwd\"] = \"'/home/janmak98/mucus'\"\n",
@@ -55,6 +58,30 @@
     "    #print(cfg)\n",
     "    #cfg.save_config(fout)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "true\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = (1, 2, 3)\n",
+    "#a = (5)\n",
+    "\n",
+    "if (type(a) == tuple) or (type(a)==list):\n",
+    "    print(\"true\")\n",
+    "else:\n",
+    "    print(\"false\")"
    ]
   }
  ],
