added exp data and other tsting stuff

--- a/test_skripts/create_test_configs.ipynb
+++ b/test_skripts/create_test_configs.ipynb
@@ -2,10 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "parent_path = \"/home/jan/Documents/masterthesis/project/mucus\"\n",
+    "sys.path.append(parent_path)\n",
+    "\n",
     "import numpy as np\n",
     "from polymer.config import Config\n",
     "import toml\n",
@@ -14,25 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CREATE CONFIG FILES FOR TESTING\n",
     "\n",
     "#config_dict = {'steps': 100, 'stride': 50, 'nbeads': 10, 'nchains': 8, 'mobility': 5e-05, 'fname_sys': \"'a/b/c.txt'\", 'fname_traj': None}\n",
-    "config_dict = {'steps': 200000, 'stride': 20, 'nbeads': 10, 'nchains': 12, 'mobility': 5e-05, 'lbox': 20}\n",
+    "config_dict = {'steps': 1000000, 'stride': 50, 'nbeads': 10, 'nchains': 12, 'mobility': 5e-05, 'lbox': 20, 'number_of_beads': 120}\n",
     "\n",
     "# nm = ((6, 6), (10, 8), (10, 16), (12, 36), (20, 36), (11, 91))\n",
     "nbeads = 10\n",
     "r0 = 2\n",
-    "lbox = np.linspace(nbeads*r0, nbeads*r0*2.5, 7)\n",
+    "lbox = np.linspace(nbeads*r0, nbeads*r0*2.5, 2)\n",
     "\n",
     "pathout = \"/home/jan/Documents/masterthesis/project/mucus/configs/tests\"\n",
     "path_sys = \"/home/janmak98/mucus/configs\"\n",
     "path_traj = \"/storage/janmak98/masterthesis/trajectories/box/test\"\n",
     "\n",
-    "cfg_name = \"test_boxsize_long\"\n",
+    "cfg_name = \"test_box_10_12\"\n",
     "\n",
     "for i, k in enumerate(lbox):\n",
     "    # config_dict[\"nbeads\"] = k[0]\n",
