fixed config ad calss to properly load system from config and trajectory

--- a/test_skripts/create_test_configs.ipynb
+++ b/test_skripts/create_test_configs.ipynb
@@ -18,6 +18,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "171.101447928321\n",
+      "107.78715795619158\n",
+      "82.2569965845321\n",
+      "67.9016546086747\n",
+      "58.51587207979685\n",
+      "51.81866074899135\n",
+      "46.75789930851305\n",
+      "42.77536198208024\n",
+      "39.545039326273134\n"
+     ]
+    }
+   ],
+   "source": [
+    "def n2L(n, c, a=2.6e-10, n_MM=1):\n",
+    "    \"\"\"\n",
+    "    calculates the box length in rescaled units (1a = 2.6e-10 m)\n",
+    "    for n beads in with concentration c, where [c] = wt%\n",
+    "    \n",
+    "    this assumes that one bead represents n_MM monomeres with distance 2a*n_MM to each other.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    nA = 6.02214076e23\n",
+    "    lbox = (44.05*n*n_MM/(nA*0.997e4*c))**(1/3)/(a*n_MM)\n",
+    "    \n",
+    "    return lbox\n",
+    "\n",
+    "n = 120\n",
+    "n_MM = np.arange(1, 10)\n",
+    "for ni in n_MM:\n",
+    "    print(n2L(n, 0.01, n_MM=ni))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "monomer radius\n",
+      "1.905 Angstrom\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate monomere DISTANCE\n",
+    "\n",
+    "cc = 1.54 # angstrom\n",
+    "oc = 1.43 # angstrom\n",
+    "\n",
+    "phi = np.deg2rad(60)\n",
+    "x = 3*oc/2 + np.cos(phi)*(cc + oc/2)\n",
+    "y = np.sin(phi)*(cc + oc/2)\n",
+    "d = np.sqrt(x**2 + y**2)\n",
+    "\n",
+    "# monomere RADIUS\n",
+    "r = d/2\n",
+    "print(\"monomer radius\")\n",
+    "print(f\"{r:.3f}\", \"Angstrom\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
