--- a/test_skripts/exp_structurefactor.ipynb
+++ b/test_skripts/exp_structurefactor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from polymer.polymer import Polymer\n",
-    "from polymer.config import Config"
+    "from polymer.config import Config\n",
+    "from numba import njit"
    ]
   },
   {
@@ -43,30 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'NoneType' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[22], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m fname_traj \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m/home/jan/Documents/masterthesis/project/mucus/trajectories/traj_test_time_nbeads_5.gro\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      7\u001b[0m p \u001b[39m=\u001b[39m Polymer(cfg)\n\u001b[0;32m----> 8\u001b[0m p\u001b[39m.\u001b[39;49mload_traj_gro(fname_traj,overwrite\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[1;32m     11\u001b[0m \u001b[39m#make q dependent on lambda\u001b[39;00m\n\u001b[1;32m     12\u001b[0m lam \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mlinspace(\u001b[39m0.5\u001b[39m, \u001b[39m20\u001b[39m, \u001b[39m300\u001b[39m) \u001b[39m# wavelength in reduced units\u001b[39;00m\n",
-      "File \u001b[0;32m~/Documents/masterthesis/project/mucus/polymer/polymer.py:831\u001b[0m, in \u001b[0;36mPolymer.load_traj_gro\u001b[0;34m(self, fname, overwrite)\u001b[0m\n\u001b[1;32m    827\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtrajectory \u001b[39m=\u001b[39m md\u001b[39m.\u001b[39mload(fname)\u001b[39m.\u001b[39mxyz\n\u001b[1;32m    830\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpositions \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtrajectory[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n\u001b[0;32m--> 831\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_bonds()\n",
-      "File \u001b[0;32m~/Documents/masterthesis/project/mucus/polymer/polymer.py:300\u001b[0m, in \u001b[0;36mPolymer.get_bonds\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    298\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbonds \u001b[39m=\u001b[39m\u001b[39mlist\u001b[39m(())\n\u001b[1;32m    299\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbonds\u001b[39m.\u001b[39mappend((\u001b[39m0\u001b[39m,\u001b[39m1\u001b[39m))\n\u001b[0;32m--> 300\u001b[0m \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mn_beeds\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m):\n\u001b[1;32m    301\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbonds\u001b[39m.\u001b[39mappend((k, k\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m))\n\u001b[1;32m    302\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbonds\u001b[39m.\u001b[39mappend((k, k\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m))\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'NoneType' and 'int'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# calculate simulated structure factor\n",
     "\n",
     "# load trajectory into Polymer object\n",
-    "fname_cfg = \"/home/jan/Documents/masterthesis/project/mucus/configs/cfg_test_time_nbeads_5.toml\"\n",
+    "fname_cfg = \"/home/jan/Documents/masterthesis/project/mucus/configs/tests/cfg_test_box_10_12_0.toml\"\n",
     "cfg = Config.from_toml(fname_cfg)\n",
-    "fname_traj = \"/home/jan/Documents/masterthesis/project/mucus/trajectories/traj_test_time_nbeads_5.gro\"\n",
+    "fname_traj = \"/home/jan/Documents/masterthesis/project/mucus/trajectories/test/traj_test_box_10_12_0.gro\"\n",
     "p = Polymer(cfg)\n",
     "p.load_traj_gro(fname_traj,overwrite=True)\n",
     "\n",
@@ -77,8 +64,41 @@
     "theta = 0.05 #scattering angle\n",
     "q = 4*np.pi*n/lam * np.sin(theta/2)\n",
     "\n",
-    "p.get_structure_factor(q=q)\n",
+    "p.get_structure_factor(q=q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = np.array(q)\n",
+    "        \n",
     "\n",
+    "trajectory = p.trajectory\n",
+    "n_beeds = p.n_beeds\n",
+    "@njit\n",
+    "def S_q(trajectory, q, n_beeds):\n",
+    "    structure_factor = np.zeros(len(q))\n",
+    "    for frame in trajectory:\n",
+    "        for i in range(n_beeds-1):\n",
+    "            for j in range(i+1, n_beeds):\n",
+    "                r = frame[j] - frame[i] \n",
+    "                qr = q*np.sqrt(np.dot(r, r))\n",
+    "                structure_factor += np.sin(qr)/qr\n",
+    "\n",
+    "    #factor 2 because of double sum reduction from i,j to i<j\n",
+    "    structure_factor = structure_factor*2/n_beeds**2/len(trajectory)\n",
+    "    return structure_factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.figure()\n",
     "plt.plot(q, p.structure_factor)\n",
     "plt.show()"
