--- a/test_skripts/test_stuff.ipynb
+++ b/test_skripts/test_stuff.ipynb
@@ -21,14 +21,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'NoneType'>\n",
-      "<class 'float'>\n"
+      "22701.597146294087\n"
      ]
     }
    ],
    "source": [
-    "print(type(None))\n",
-    "print(type(5.3))"
+    "def n_PEG(m):\n",
+    "    \"\"\"\n",
+    "    m...PEG molecular wight in kDa\n",
+    "    \"\"\"\n",
+    "    m = m/(6.022e20) # g\n",
+    "    nA = 6.02214076e23\n",
+    "    n = (m*nA-18.02)/44.05\n",
+    "    return n\n",
+    "\n",
+    "#print(n_PEG(1000))\n",
+    "\n",
+    "nA = 6.02214076e23\n",
+    "g2kDa = 6.022e20\n",
+    "m_1 = 44.05 # g mass of one monomere"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1% 171.10144792832097\n",
+      "2% 135.8033092173494\n",
+      "4% 107.78715795619155\n"
+     ]
+    }
+   ],
+   "source": [
+    "def n2L(n, c):\n",
+    "    nA = 6.02214076e23\n",
+    "    lbox = (44.05*n/(nA*0.997e4*c))**(1/3)*1e10/2.6\n",
+    "    \n",
+    "    return lbox\n",
+    "\n",
+    "n = 120\n",
+    "print(\"1%\", n2L(n, 0.01))\n",
+    "print(\"2%\", n2L(n, 0.02))\n",
+    "print(\"4%\", n2L(n, 0.04))"
    ]
   },
   {
