fixed cwd in config

--- a/test_skripts/create_test_configs.ipynb
+++ b/test_skripts/create_test_configs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,13 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "3.8109086842904016\n",
       "monomer radius\n",
       "1.905 Angstrom\n"
      ]
@@ -81,7 +82,7 @@
     "x = 3*oc/2 + np.cos(phi)*(cc + oc/2)\n",
     "y = np.sin(phi)*(cc + oc/2)\n",
     "d = np.sqrt(x**2 + y**2)\n",
-    "\n",
+    "print(d)\n",
     "# monomere RADIUS\n",
     "r = d/2\n",
     "print(\"monomer radius\")\n",
