fixed debye screening

--- a/test_skripts/create_test_configs.ipynb
+++ b/test_skripts/create_test_configs.ipynb
@@ -68,12 +68,14 @@
      "text": [
       "3.8109086842904016\n",
       "monomer radius\n",
-      "1.905 Angstrom\n"
+      "1.905 Angstrom\n",
+      "beed charge\n",
+      "1.524\n"
      ]
     }
    ],
    "source": [
-    "# calculate monomere DISTANCE\n",
+    "# calculate monomere DISTANCE for PEG \n",
     "\n",
     "cc = 1.54 # angstrom\n",
     "oc = 1.43 # angstrom\n",
@@ -86,7 +88,10 @@
     "# monomere RADIUS\n",
     "r = d/2\n",
     "print(\"monomer radius\")\n",
-    "print(f\"{r:.3f}\", \"Angstrom\")"
+    "print(f\"{r:.3f}\", \"Angstrom\")\n",
+    "\n",
+    "print(\"beed charge\")\n",
+    "print(f\"{0.8*r:.3f}\")"
    ]
   },
   {
