--- a/test_skripts/create_test_configs.ipynb
+++ b/test_skripts/create_test_configs.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,9 @@
       "monomer radius\n",
       "1.905 Angstrom\n",
       "beed charge\n",
-      "1.524\n"
+      "1.524\n",
+      "Bjerrum length\n",
+      "36.737\n"
      ]
     }
    ],
@@ -91,38 +93,57 @@
     "print(f\"{r:.3f}\", \"Angstrom\")\n",
     "\n",
     "print(\"beed charge\")\n",
-    "print(f\"{0.8*r:.3f}\")"
+    "print(f\"{0.8*r:.3f}\")\n",
+    "\n",
+    "print(\"Bjerrum length\")\n",
+    "print(f\"{7/(0.1*r):.3f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {'a':1}\n",
+    "d['b'] = 2\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CREATE CONFIG FILES FOR TESTING\n",
     "\n",
     "#config_dict = {'steps': 100, 'stride': 50, 'nbeads': 10, 'nchains': 8, 'mobility': 5e-05, 'fname_sys': \"'a/b/c.txt'\", 'fname_traj': None}\n",
-    "config_dict = {'steps': 1000000, 'stride': 50, 'nbeads': 10, 'nchains': 12, 'mobility': 5e-05, 'lbox': 20, 'number_of_beads': 120}\n",
+    "config_dict = {'steps': 2000000, 'stride': 50, 'nbeads': 70, 'nchains': 2, 'mobility': 5e-05}\n",
+    "config_dict['number_of_beads'] = config_dict['nbeads']*config_dict['nchains']\n",
     "\n",
-    "# nm = ((6, 6), (10, 8), (10, 16), (12, 36), (20, 36), (11, 91))\n",
-    "nbeads = 10\n",
-    "r0 = 2\n",
-    "lbox = np.linspace(nbeads*r0, nbeads*r0*2.5, 2)\n",
+    "#params = ((0, 0, 0), (100, 0, 0), (100, 0.25, 0), (100, 0.25, 1.524))\n",
+    "params = (0, 0.5*1.524, 1.524, 2*1.524, 4*1.524, 10*1.524)\n",
     "\n",
     "pathout = \"/home/jan/Documents/masterthesis/project/mucus/configs/tests\"\n",
-    "path_sys = \"/home/janmak98/mucus/configs\"\n",
+    "path_sys = \"/storage/janmak98/masterthesis/configs/box/test\"\n",
     "path_traj = \"/storage/janmak98/masterthesis/trajectories/box/test\"\n",
     "\n",
-    "cfg_name = \"test_box_10_12\"\n",
+    "cfg_name = \"box_testCharges_100beads_1Msteps\"\n",
     "\n",
-    "for i, k in enumerate(lbox):\n",
-    "    # config_dict[\"nbeads\"] = k[0]\n",
-    "    # config_dict[\"nchains\"] = k[1]\n",
-    "    config_dict[\"lbox\"] = k\n",
+    "for i, k in enumerate(params):\n",
+    "\n",
+    "    config_dict[\"qbead\"] = k\n",
     "    config_dict[\"fname_sys\"] = f\"'{path_sys:s}/cfg_{cfg_name:s}_{i:d}.toml'\"\n",
     "    config_dict[\"fname_traj\"] = f\"'{path_traj:s}/traj_{cfg_name:s}_{i:d}.gro'\"\n",
-    "    config_dict[\"cwd\"] = \"'/home/janmak98/mucus'\"\n",
     "    output = \"\"\n",
     "    for key in config_dict:\n",
     "        output += f\"{key:s} = {config_dict[key]}\\n\"\n",
