--- a/test_skripts/testclass.ipynb
+++ b/test_skripts/testclass.ipynb
@@ -6,8 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "parent_path = \"/home/jan/Documents/masterthesis/project/mucus\"\n",
+    "sys.path.append(parent_path)\n",
+    "\n",
     "from polymer import Polymer\n",
-    "from polymer.config import Config\n",
+    "from polymer import Config\n",
     "import sys\n",
     "import os\n",
     "from time import time\n",
